# glo

./: .gitignore  .readthedocs.yml  .travis.yml  LICENSE  Pipfile  README.md  pylintrc  pyproject.toml  scrapy.cfg  setup.py  tox.ini
docs/: .readthedocs.yml  requirements.txt
docs/source/: conf.py  index.rst
glo/: __init__.py  _ureg.py  helpers.py  item.py  nutrition.py  product.py  scrapy.cfg  transform.py  units.py
glo/data/: __init__.py  kingsoopers.py  pandas.py
glo/features/: __init__.py  _ureg.py  allergen.py  indicator.py  nutrition.py  price.py  serving.py
glo/gloscrape/: items.py  middlewares.py  settings.py  user_agent_picker.py
glo/gloscrape/extra/: windscribe-akamai.txt  windscribe-all.txt
glo/gloscrape/spiders/: kingsoopers.py
glo/models/: __init__.py
glo/models/kingsoopers/: __init__.py  dqn.py
glo/readers/: abc.py  base.py  file.py
glo/scrape/: items.py  settings.py
glo/scrape/items/: __init__.py
glo/scrape/spiders/: kingsoopers.py
glo/scrape/txt/: uas-small.txt  uas.txt
tests/: test_helpers.py  test_item.py  test_nutrition.py  test_product.py  test_units.py  test_ureg.py
tests/test_data/: test_pandas.py
tests/test_features/: test_allergen.py  test_nutrition.py  test_serving.py
tests/test_readers/: test_file.py
